src/options/style.css
$compactHeaderHeight: 4rem;
$tabPadX: 2rem;
$tabPadY: 3rem;
$tabPadTopY: 1.5rem;
$sectionBorder: 1px solid var(--fill-2);

button {
  height: 1.5rem;
}

aside {
  top: 0;
  z-index: 1000;
  display: flex;
  background: var(--fill-0-5);
  border: solid var(--fill-5);
}
aside > * {
  display: flex;
  @media (prefers-color-scheme: dark) {
    border-color: var(--fill-3);
  }
}
.aside-content {
  flex: 1;
}
.aside-menu-item {
  font-size: 1rem;
  font-weight: 500;
  a {
    display: block;
    color: var(--fill-8);
    text-align: right;
    &.active,
    &:hover {
      color: var(--fg);
    }
  }
  [data-num-scripts] {
    &::before {
      content: '(' attr(data-num-scripts) ')';
      width: 5.5ch;
      align-self: center;
      text-align: right;
      margin-right: .5ch;
    }
  }
}
html:not(.narrow) {
  aside {
    position: fixed;
    left: 0;
    width: 14rem;
    bottom: 0;
    flex-flow: column;
    padding: 4rem 1rem 1rem;
    border-width: 0 1px 0 0;
    > * {
      flex-flow: column;
      align-items: flex-end;
    }
    header {
      padding-bottom: .75em;
      border-bottom: 1px inset var(--fill-5);
      margin-bottom: 1.5em;
    }
    img {
      width: 5rem;
      height: 5rem;
    }
    [data-num-scripts="0"]::before {
      visibility: hidden;
    }
  }
  .aside-menu-item {
    a {
      line-height: 2.5;
    }
    &:nth-last-child(2) {
      flex: 1;
    }
    &:last-child {
      font-size: .8em;
    }
  }
}
.text-red {
  color: red;
}
.text-upper {
  text-transform: uppercase;
}
section {
  padding: 0 0 $tabPadY;
  > h3 {
    background: linear-gradient(to right, var(--hbg, var(--fill-1)), transparent);
    border-top: $sectionBorder;
    line-height: 2;
    padding: 0 $tabPadX;
    margin: 0 calc(-1 * $tabPadX);
    margin-bottom: calc($tabPadY * .75) !important;
  }
  > h4 {
    margin-bottom: .3rem;
  }
  > p {
    margin-bottom: .3rem;
  }
}
textarea:not([rows="1"]):not(.h100) {
  resize: vertical;
  min-height: 2em;
  max-height: 50vh;
}
@media (min-width: 1440px) {
  .tab-settings[data-show-advanced=true] {
    columns: 2;
    column-gap: calc(2 * $tabPadX);
    details {
      break-inside: avoid;
    }
  }
}
.tab {
  position: relative;
  margin-left: 14rem;
  padding: $tabPadTopY $tabPadX 0;
  // overflow-y: auto;
  background: var(--bg);
}

.vl-modal {
  z-index: 3000;
}

.in-out {
  &-appear-from,
  &-enter-from,
  &-leave-to {
    > .modal-content {
      transform: translateY(-120%);
    }
    > .vl-modal-backdrop {
      opacity: 0;
    }
  }
  &-appear-active,
  &-enter-active,
  &-leave-active {
    &,
    > .modal-content {
      transition: transform .5s;
    }
    > .vl-modal-backdrop {
      transition: opacity .5s;
    }
  }
}

@media (max-width: 640px) {
  [data-short] > *,
  aside[data-recycled] [data-name="about"],
  aside:not([data-recycled]) [data-name="recycleBin"] {
    display: none;
  }
  [data-short]::after {
    content: attr(data-short);
  }
}

html.narrow {
  .page-options {
    flex-direction: column;
  }
  .tab {
    width: auto !important;
    margin: 0;
  }
  aside {
    position: sticky;
    height: $compactHeaderHeight;
    border-width: 0 0 1px 0;
    img {
      width: calc($compactHeaderHeight - 8px);
      height: calc($compactHeaderHeight - 8px);
      margin: 0 .5rem;
      flex: 0 0 auto;
    }
    > * {
      align-items: center;
    }
    &:not([data-recycled]) [data-name="recycleBin"],
    &[data-recycled] h1 {
      display: none;
    }
  }
  h1 {
    margin: 0; /* centering */
  }
  $itemGap: 1rem;
  .aside-content {
    padding-right: $itemGap;
    place-content: center space-evenly;
  }
  .aside-menu-item a {
    line-height: 1.5;
    margin-left: $itemGap;
  }
}

.bright {
  --hbg: bisque;
}

@media (prefers-color-scheme: dark) {
  .bright {
    --hbg: #880088; /* active badge color */
  }
}

